# claude-budget

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/usage/: SKILL.md
.claude/skills/watch/: SKILL.md
claude_budget/: __init__.py  budget.py  cli.py  policy.py  usage.py
claude_budget/cli/: __init__.py  usage.py  watch.py
scripts/: capture_usage.py  install.py
tests/e2e/cli/: usage_test.py  watch_test.py
tests/integration/: watch_test.py
tests/unit/: budget_test.py  cache_test.py  policy_test.py  usage_test.py
