[project]
name = "claude-budget"
version = "0.1.0"
description = "Usage budget management for the Anthropic Agent SDK"
requires-python = ">=3.14"
dependencies = [
    "cyclopts>=4.10.1",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
claude-budget = "claude_budget.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["claude_budget"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "curtaincall>=0.3.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-describe>=3.1.0",
]
